--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -26,3 +26,9 @@ panel {
     padding-left: 0;
     padding-right:0;
 }
+
+.darken-1 {
+    color: lightyellow;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
